# swisseph-rs

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.sutra/: aliases.toml  rules.toml
benches/: ephemeris.rs
docs/: benchmarks.md  c-catalogue-internal.md  c-catalogue-public.md  c-ref-asteroid.md  c-ref-ayanamsa.md  c-ref-calc.md  c-ref-crossings.md  c-ref-deltat.md  c-ref-eclipse-lunar.md  c-ref-eclipse-solar.md  c-ref-fictitious.md  c-ref-fixstar.md  c-ref-gauquelin-riseset.md  c-ref-heliacal-pheno.md  c-ref-heliacal-search.md  c-ref-heliacal-vision.md  c-ref-houses.md  c-ref-jpl.md  c-ref-mean-elements.md  c-ref-moon-perturbations.md  c-ref-moshier.md  c-ref-nodaps.md  c-ref-nutation.md  c-ref-occultation.md  c-ref-orbital-elements.md  c-ref-pctr.md  c-ref-phenomena.md  c-ref-plmoon.md  c-ref-refraction-azalt.md  c-ref-riseset.md  c-ref-se1-file.md  c-ref-sidereal-time.md  c-ref-topocentric.md  c-ref-utilities.md  c-variable-glossary.md  codebase-map.md  enforcement-ledger.md  ffi-design.md  golden-testing.md  rse-review-gates.md  (+1 more)
docs/archived/: phase-1-considerations.md  phase-2-considerations.md  phase-3-considerations.md  task-18-considerations.md  task-19-considerations.md  task-21-considerations.md  task-22-considerations.md  task-23-considerations.md  task-7-considerations.md
examples/: eclipse_search.rs  natal.rs  rise_set.rs  sidereal.rs
scripts/: gen_moshier_moon_tables.py  gen_moshier_tables.py  gen_nutation_data.py
src/: ayanamsa.rs  azalt.rs  bias.rs  calc.rs  config.rs  constants.rs  context.rs  corrections.rs  crossings.rs  date.rs  eclipse.rs  error.rs  fictitious.rs  flags.rs  format.rs  heliacal.rs  houses.rs  lib.rs  math.rs  nodaps.rs  obliquity.rs  orbit.rs  phenomena.rs  precession.rs  riseset.rs  sidereal_time.rs  stars.rs  topocentric.rs  types.rs
src/deltat/: data.rs  mod.rs
src/jpl/: header.rs  interp.rs  mod.rs
src/moshier/: backend.rs  mod.rs  moon.rs  moon_tables.rs  planets.rs  tables.rs
src/nutation/: data.rs  mod.rs
src/sweph_file/: evaluate.rs  mod.rs  parse.rs  segment.rs  types.rs
swetest/: Cargo.toml
swetest/src/: args.rs  compute.rs  format.rs  main.rs  special.rs
swisseph-ffi/: Cargo.toml  README.md  cbindgen.toml
swisseph-ffi/include/: swisseph.h
swisseph-ffi/src/: config.rs  date.rs  eclipse.rs  error.rs  heliacal.rs  houses.rs  lib.rs  pheno.rs  util.rs
swisseph-ffi/tests/: c_smoke.rs  calc.rs  concurrency.rs  date.rs  eclipse.rs  handle.rs  header_freshness.rs  heliacal.rs  houses.rs  pheno.rs
swisseph-ffi/tests/c/: smoke.c
tests/: api_surface.rs  send_sync.rs
tests/c-gen/: .gitignore  gen_asteroid.c  gen_asteroid_moseph.c  gen_asteroid_numbered.c  gen_ayanamsa  gen_ayanamsa.c  gen_ayanamsa_calc  gen_ayanamsa_calc.c  gen_azalt  gen_azalt.c  gen_calc  gen_calc.c  gen_calc_helctr.c  gen_calc_jpl  gen_calc_jpl.c  gen_calc_sweph  gen_calc_sweph.c  gen_calc_topo  gen_calc_topo.c  gen_corrections  gen_corrections.c  gen_cross.c  gen_deltat  gen_deltat.c  gen_eclipse  gen_eclipse.c  gen_fictitious.c  gen_fictitious_elements.c  gen_fixstar.c  gen_fixstar_ayanamsa.c  gen_heliacal.c  gen_heliacal_internals.c  gen_houses  gen_houses.c  (+35 more)
tools/: Makefile  bench_c.c  golden_gen.c  test-features.sh
(+92 files in other folders)
