[package]
name = "swisseph"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
ureq = "3"

[[bin]]
name = "make-swe-stars"
path = "src/bin/make_swe_stars.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }
