[workspace]
members = [".", "swisseph-ffi", "swetest"]

[package]
name = "swisseph-rs"
version = "0.1.2"
edition = "2024"
description = "Pure, stateless Rust port of the Swiss Ephemeris astronomical calculation library"
license = "AGPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/ninthhousestudios/swisseph-rs"
keywords = ["astronomy", "ephemeris", "astrology", "swisseph"]
categories = ["science"]

[lib]
name = "swisseph"

[features]
default = ["swisseph-files", "jpl"]
swisseph-files = ["dep:memmap2"]
jpl = ["dep:memmap2"]
serde = ["dep:serde", "bitflags/serde"]
star-tools = ["dep:clap", "dep:ureq"]

[dependencies]
bitflags = "2"
clap = { version = "4", features = ["derive"], optional = true }
memmap2 = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
ureq = { version = "3", optional = true }

[[bin]]
name = "make-swe-stars"
path = "src/bin/make_swe_stars.rs"
required-features = ["star-tools"]

[[test]]
name = "golden"
path = "tests/golden/main.rs"
required-features = ["swisseph-files", "jpl"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["float_roundtrip"] }

[[bench]]
name = "ephemeris"
harness = false
